- https://github.com/eclipse-sirius/sirius-web/issues/2329[#2335] [form] The general mutation `editReference` has been removed from the reference widget. This mutation has been replaced by finer grain mutations:
** _clearReference_ mutation: to reset the content references (set the value to `null` for mono-valued references and to an empty list for multi-valued ones).
** _addReferenceValues_ mutation: to several reference values to a reference (only used with mutli-valued references)
** _setReferenceValue_ mutation: to set the value of mono-valued references
** _removeReferenceValue_ mutation: to remove a given value from a reference (in case of mono-valued references, this mutation is equivalent to _clearReference_)
** _createElementInReference_ mutation: to create a new element (used in the context of a reference widget)
** _moveReferenceValue_ mutation: to reorder the list of values in multi-valued references

UI is unchanged except that we removed the transactional behavior of the _TransferModal_ component which is now performing operations live. This means that changes are no longer done when the modal is close (using the _Apply_ button) but as soon as the user interacts with elements (adding or removing values, changing order).

- https://github.com/eclipse-sirius/sirius-web/issues/2269[#2269] [core] The GraphQL field `EditingContext#domains` has been modified.
A new parameter `rootDomainsOnly: Boolean` has been added, allowing to remove domains not compatible with root objects.
For example, Diagram & Form domains are not root domains because `DiagramDescription` and `FormDescription` are not root objects valid candidates.

=== Dependency update


=== Bug fixes

- https://github.com/eclipse-sirius/sirius-web/issues/2360[#2360] [form] Fix an issue that prevent creation of new object on some containment reference with the reference widget.