@@ -96,6 +96,7 @@ _UI_NodeStyleDescription_labelColor_feature = Label Color
 _UI_NodeStyleDescription_widthComputationExpression_feature = Width Computation Expression
 _UI_NodeStyleDescription_heightComputationExpression_feature = Height Computation Expression
 _UI_NodeStyleDescription_showIcon_feature = Show Icon
+_UI_NodeStyleDescription_labelIcon_feature = Label Icon
 _UI_ConditionalNodeStyle_style_feature = Style
 _UI_RectangularNodeStyleDescription_withHeader_feature = With Header
 _UI_ImageNodeStyleDescription_shape_feature = Shape
@@ -104,6 +105,7 @@ _UI_EdgeStyle_sourceArrowStyle_feature = Source Arrow Style
 _UI_EdgeStyle_targetArrowStyle_feature = Target Arrow Style
 _UI_EdgeStyle_edgeWidth_feature = Edge Width
 _UI_EdgeStyle_showIcon_feature = Show Icon
+_UI_EdgeStyle_labelIcon_feature = Label Icon
 _UI_DiagramPalette_dropTool_feature = Drop Tool
 _UI_DiagramPalette_dropNodeTool_feature = Drop Node Tool
 _UI_DiagramPalette_nodeTools_feature = Node Tools
